examples/ingress-controllers/alb-ingress/apps/hello-world-1/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-1
  labels:
    lp-service-id: hello-world-1
spec:
  selector:
    matchLabels:
      lp-service-id: hello-world-1
  template:
    metadata:
      labels:
        lp-service-id: hello-world-1
    spec:
      containers:
      - name: hello-world-1
        image: 805470640934.dkr.ecr.us-west-2.amazonaws.com/lonelyplanet/hello-world-1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
